# mxc

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanprofile_linux  defaults.cfg  run_cmake_debug.zsh
include/: common.hpp  constants.hpp  finteger.hpp  fnumber.hpp  ftrig.hpp  numfunctions.hpp
include/minmath/: common.h  common.hpp  constants.h  constants.hpp  fnumber.h  fnumber.hpp  fpowlog.h  fpowlog.hpp  ftrig.h
src/: common.cpp  common_private.h  common_private.hpp  constants.cpp  finteger.cpp  fnumber.cpp  fpowlog.cpp  ftrig.cpp
src/core/: CMakeLists.txt  Config.cmake.in
src/core/include/mcore/: logging.h  macros.h
src/core/src/: logging.cpp
src/math/: CMakeLists.txt  Config.cmake.in  README.md
src/math/include/mmath/: common.h  constants.h  macros.h  number.h  powlog.h  trig.h  vec.h
src/math/include/mmath/detail/: vec_base.h  vec_swizzler.h
src/math/src/: common.cpp
src/math/test/: CMakeLists.txt  vec.cpp
src/platform/: CMakeLists.txt  Config.cmake.in  README.md  TargetArch.cmake
src/platform/cmd/: generateCPUInformation.cpp
src/platform/include/mplatform/: arch_macros.h  cpu.generated.h  simd.h  simd_DEPRECATED.h  simd_dispatch.h
src/platform/include/mplatform/x86_64/extensions/: avx.h  avx2.h  avx512f.h  common_types.h  f16c.h  fma3.h  sse.h  sse2.h  sse2vex.h  sse3.h  sse3vex.h  sse4_1.h  sse4_1vex.h  sse4_2.h  sse4_2vex.h  ssevex.h  ssse3.h  ssse3vex.h
src/platform/src/: simd_DEPRECATED.cpp  simd_dispatch.cpp
src/platform/src/x86_64/: cpufeatures.cpp  cpufeatures.h  simd_interface_map.csv
src/platform/src/x86_64/extensions/: avx.cpp  avx2.cpp  f16c.cpp  fma3.cpp  sse.cpp  sse2.cpp  sse3.cpp  sse4_1.cpp  sse4_2.cpp  ssse3.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: package_test.cpp
tests/: CMakeLists.txt  main.cpp
